# veritrail

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
examples/: demo.py
tests/: test_api.py  test_crypto.py  test_engine.py  test_extended.py  test_fuzz_1000.py  test_ledger_tamper.py  test_postgres.py  test_scope.py
veritrail/: __init__.py  action.py  audit.py  cli.py  crypto.py  delegation.py  detection.py  engine.py  errors.py  forensics.py  ledger.py  persistence.py  principals.py  revocation.py  scope.py
veritrail/api/: server.py
