[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritrail"
version = "0.2.2"
description = "Verifiable provenance and forensics for autonomous AI agents — a tamper-evident flight recorder and cryptographic chain-of-custody for agentic actions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Veritrail" }]
keywords = ["ai-agents", "provenance", "audit", "security", "forensics", "owasp", "nist", "delegation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
veritrail = "veritrail.cli:main"

[tool.setuptools.packages.find]
include = ["veritrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
